--- a/src/style/swiperCustom.css
+++ b/src/style/swiperCustom.css
@@ -49,3 +49,11 @@
     width:300px;
   }
   
+
+  .miniSwiper .swiper-slide {
+    /* width: 200px !important; */
+  }
+
+  .miniSwiper .swiper-slide img {
+    width: 100%;
+  }
